--- a/index.html
+++ b/index.html
@@ -10,5 +10,7 @@
     <div id="app"></div>
     <div id='data-binding'></div>
     <div id='zoom1'></div>
+    <div id='zoom2'></div>
+    <div id='zoom3'></div>
 </body>
 </html>
